@@ -11,7 +11,7 @@
 
      conditionalparents: nil using mixture("internal:UnityScore")
                          | seg(0) using mixture collection("collection_seg_$track")
-                         mapping("map_parent");
+                         mapping("map_seg_mixture");
 
      weight: scale $weight_scale;
    }
