@@ -11,7 +11,7 @@
 #define CARD_PRESENCE 2
 
 % which segment?
-#define CARD_SEG 2
+#define CARD_SEG $card_seg
 
 % AA .. TT
 #define CARD_DINUCLEOTIDE 16
