@@ -1,6 +1,16 @@
 0.1.4:
 
-
+* segway: -t dinucleotide is temporarily disabled
+* segway: seg_seg conditional probability table is no longer generated
+  randomly, now reflects a geometric distribution with expected
+  segment length 10000
+* segway: start_seg is no longer generated randomly, instead starting
+  probability defaults to 1/NUM_SEGS for each segment
+* segway: start_seg is no longer trained
+* segway: forces a hard minimum segment limit of 10
+* segway: change some visual formatting of posterior track
+* segway: bugfix: actually use default res usage file by default
+* segway: don't create a posterior triangulation when --dry-run used
 
 0.1.3:
 
